tests/expectations/compiler/group/no_space_between_literal.out
Error [EPAR0370005]: expected ';' -- found 'group'
    --> compiler-test:5:20
     |
   5 |   let g: group = 1 group;
     |                    ^^^^^
